--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,11 @@
 // Theme variables
 
-html[data-theme='dark'] {
+html[class='dark'] {
   --background: #000;
   --foreground: #fff;
-  --block: #fff;
+  --block: #333;
 }
-html[data-theme='light'] {
+html[class='light'] {
   --background: #fff;
   --foreground: #000;
   --block: #000;
