connect to mongodb; create change theme/language buttons; fix locale; change favicon

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,4 +1,8 @@
 .header {
-  background: #8a4848;
+  background: var(--dark-box-background);
   margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  color: var(--light-text-color);
+  padding: 10px;
 }
