--- a/src/ui/change-language-button/styles.module.scss
+++ b/src/ui/change-language-button/styles.module.scss
@@ -1,20 +1,14 @@
-.themeButton {
-  display: flex;
-  
+.langButton {
+  font-size: 14px;
+  width: 40px;
+  height: 40px;
   transition: .2s;
   border: none;
   background-color: transparent;
-  padding: 8px;
   border-radius: 6px;
 
   &:hover {
     background-color: #555;
     border-radius: 6px;
-  }
-
-  &Icon {
-    color: #fff;
-    width: 24px;
-    height: 24px;
   }
 }
