--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,8 +1,4 @@
 .header {
-  background: var(--dark-box-background);
-  margin-bottom: 15px;
-  display: flex;
-  justify-content: center;
+  background-color: var(--header-background);
   color: var(--light-text-color);
-  padding: 10px;
 }
