--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,7 +24,7 @@ html[class='light'] {
 
   --header-background: rgba(22, 22, 22, .85);
 
-  --box-background: #fff;
+  --box-background: #f5f5f5;
 
   --box-shadow-nav-mobile: 2px 0 6px 2px rgba(0, 0, 0, .2);
   --box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, .1);
