update NoData component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 html[class='dark'] {
   --background: #000;
-  --text-color: #e8e8e8;
+  --text-color: #eee;
 
   --header-background: rgba(33, 33, 33, .85);
 
@@ -46,5 +46,5 @@ html[class='light'] {
 
   --dark-box-background: #222;
 
-  --light-text-color: #e8e8e8;
+  --light-text-color: #eee;
 }
