--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,8 @@ html[class='dark'] {
   --input-background-color: #000;
   --input-placeholder-color: #bababa;
 
+  --shimmer-color: rgba(65, 65, 65, 0.4);
+
   --hover-color: #282828;
 }
 
@@ -32,6 +34,8 @@ html[class='light'] {
 
   --input-background-color: #fff;
   --input-placeholder-color: #717171;
+
+  --shimmer-color: rgba(200, 200, 200, 0.4);
 
   --hover-color: #f1f1f1;
 }
