--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 html[class='dark'] {
   --background: #000;
-  --text-color: #e8e8e8;
+  --text-color: #eee;
 
   --header-background: rgba(33, 33, 33, .85);
 
@@ -15,6 +15,8 @@ html[class='dark'] {
   --input-background-color: #000;
   --input-placeholder-color: #bababa;
 
+  --shimmer-color: rgba(65, 65, 65, 0.4);
+
   --hover-color: #282828;
 }
 
@@ -24,7 +26,7 @@ html[class='light'] {
 
   --header-background: rgba(22, 22, 22, .85);
 
-  --box-background: #fff;
+  --box-background: #f5f5f5;
 
   --box-shadow-nav-mobile: 2px 0 6px 2px rgba(0, 0, 0, .2);
   --box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, .1);
@@ -32,6 +34,8 @@ html[class='light'] {
 
   --input-background-color: #fff;
   --input-placeholder-color: #717171;
+
+  --shimmer-color: rgba(200, 200, 200, 0.4);
 
   --hover-color: #f1f1f1;
 }
@@ -46,5 +50,5 @@ html[class='light'] {
 
   --dark-box-background: #222;
 
-  --light-text-color: #e8e8e8;
+  --light-text-color: #eee;
 }
