fix header mobile close; fix height skeleton and add delay for get data

--- a/src/skeletons/show-category-skeleton/styles.module.scss
+++ b/src/skeletons/show-category-skeleton/styles.module.scss
@@ -1,13 +1,17 @@
 .skeleton {
   background-color: var(--box-background);
   width: 100%;
-  min-height: 350px;
+  min-height: 330px;
   padding: 20px;
   border-radius: 12px;
   box-shadow: var(--box-shadow);
   display: flex;
   position: relative;
   overflow: hidden;
+
+  @media screen and (max-width: 600px) {
+    min-height: 310px;
+  }
   
   &::before {
     content: "";
