--- a/src/app/[locale]/styles.module.scss
+++ b/src/app/[locale]/styles.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  min-height: 100vh;
+  min-height: 100dvh;
 
   &Top {
     position: sticky;
