create: apiError for error handling, delete product from favorites, add product to cart

--- a/src/ui/product-card/styles.module.scss
+++ b/src/ui/product-card/styles.module.scss
@@ -50,8 +50,8 @@
   }
 
   &Image {
-    max-width: 210px;
-    width: 100%;
+    // max-width: 210px;
+    // width: 100%;
     margin-bottom: 10px;
 
     @media screen and (max-width: 500px) {
