--- a/src/ui/buy-button/styles.module.scss
+++ b/src/ui/buy-button/styles.module.scss
@@ -3,15 +3,15 @@
   align-items: center;
   gap: 10px;
   padding: 8px 15px;
-  color: #fff;
-  background-color: #e00027;
+  background-color: var(--accent-color);
   border: none;
   border-radius: 3px;
-  fill: #fff;
-  transition: all .3s;
+  color: var(--light-text-color);
+  transition: all .2s;
+  cursor: pointer;
 
   &:hover {
-    background-color: #f97988;
+    background-color: var(--hover-accent-color);
   }
   
   &Link {
@@ -19,19 +19,19 @@
     align-items: center;
     gap: 10px;
     padding: 8px 15px;
-    background-color: #e00027;
+    background-color: var(--accent-color);
     border-radius: 3px;
-    fill: #fff;
-    color: #fff;
+    color: var(--light-text-color);
     text-decoration: none;
-    transition: all .3s;
+    transition: all .2s;
   
     &:hover {
-      background-color: #f97988;
+      background-color: var(--hover-accent-color);
     }
   }
   
   &NoActive {
     background-color: #5c5c5c;
+    cursor: auto;
   }
 }
