--- a/src/components/header-content/styles.module.scss
+++ b/src/components/header-content/styles.module.scss
@@ -231,27 +231,24 @@
   }
 }
 
-// .counter {
-//   display: flex;
-//   justify-content: center;
-//   position: absolute;
-//   right: -4px;
-//   top: -6px;
-//   color: #fff;
-//   background-color: var(--accent-color);
-//   border-radius: 10px;
-//   padding: 3px 5px;
-//   font-size: 11px;
+.counter {
+  position: absolute;
+  right: -4px;
+  top: -6px;
+  background-color: var(--accent-color);
+  border-radius: 10px;
+  padding: 3px 5px;
+  font-size: 11px;
 
-//   @media screen and (max-width: 500px) {
-//     right: 15px;
-//     top: 15px;
-//   }
-// }
+  @media screen and (max-width: 800px) {
+    right: 15px;
+    top: 15px;
+  }
+}
 
-// .noCount {
-//   display: none;
-// }
+.noCount {
+  display: none;
+}
 
 // .cartCounter {
 //   right: -4px;
