--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,7 @@ html[class='light'] {
   --hover-accent-color: #f97988;
 
   --grey-hover-color: #555;
+  --arrow-hover-color: #999;
 
   --dark-box-background: #222;
 
