--- a/src/components/header-content/styles.module.scss
+++ b/src/components/header-content/styles.module.scss
@@ -48,6 +48,7 @@
     transition: .2s;
     text-decoration: none;
     min-width: 170px;
+    gap: 10px;
 
     @media screen and (max-width: 1000px) {
       padding: 8px 15px;
@@ -56,10 +57,6 @@
 
     & + & {
       margin-left: 15px;
-    }
-
-    & svg {
-      margin-right: 10px;
     }
 
     &:hover {
@@ -184,10 +181,7 @@
     width: 100%;
     background-color: #4f4f4f;
     transition: all .3s;
-    
-    & svg {
-      margin-right: 15px;
-    }
+    gap: 15px;
 
     &:hover {
       background-color: #757575;
@@ -202,10 +196,7 @@
     color: var(--accent-color);
     transition: all .3s;
     font-weight: bold;
-
-    & svg {
-      margin-right: 15px;
-    }
+    gap: 15px;
 
     &:hover {
       background-color: var(--hover-color);
@@ -220,10 +211,7 @@
     width: 100%;
     color: var(--text-color);
     transition: all .3s;
-
-    & svg {
-      margin-right: 15px;
-    }
+    gap: 15px;
 
     &:hover {
       background-color: var(--hover-color);
