--- a/src/components/product-main/styles.module.scss
+++ b/src/components/product-main/styles.module.scss
@@ -26,6 +26,7 @@
     justify-content: center;
     align-items: center;
     max-width: 650px;
+    width: 100%;
     padding: 0 30px 20px;
 
     @media screen and (max-width: 1200px) {
