fix get total favorite/cart products

--- a/src/components/header-content/styles.module.scss
+++ b/src/components/header-content/styles.module.scss
@@ -238,7 +238,7 @@
   display: none;
 }
 
-// .cartCounter {
-//   right: -4px;
-//   top: -6px;
-// }
+.cartCounter {
+  right: -4px;
+  top: -6px;
+}
