--- a/src/components/product-main/styles.module.scss
+++ b/src/components/product-main/styles.module.scss
@@ -50,10 +50,17 @@
     height: 520px;
 
     @media screen and (max-width: 950px) {
-      height: auto;
+      min-height: 460px;
+      height: 100%;
+    }
+    @media screen and (max-width: 450px) {
+      min-height: 370px;
+    }
+    @media screen and (max-width: 350px) {
+      min-height: 280px;
     }
   }
-  
+
   &Image {
     height: auto;
     max-width: 500px;
